# software_development_crew_automation_lifecycle_workflow

./: .env  README.md  pyproject.toml
src/software_development_crew_automation_lifecycle_workflow/: app.py  crew.py  main.py
src/software_development_crew_automation_lifecycle_workflow/config/: agents.yaml  tasks.yaml
task_outputs/: architectural_design_task.md  define_sdlc_roadmap_task.md  development_implementation_task.md  documentation_deployment_task.md  gather_requirements_task.md  qa_testing_task.md
