[project]
name = "software_development_crew_automation_lifecycle_workflow"
version = "0.1.0"
description = "software_development_crew_automation_lifecycle_workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "chainlit>=2.4.1",
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
software_development_crew_automation_lifecycle_workflow = "software_development_crew_automation_lifecycle_workflow.main:run"
run_crew = "software_development_crew_automation_lifecycle_workflow.main:run"
train = "software_development_crew_automation_lifecycle_workflow.main:train"
replay = "software_development_crew_automation_lifecycle_workflow.main:replay"
test = "software_development_crew_automation_lifecycle_workflow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
